--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=5000
 mongoUri="mongodb+srv://BordleAdmin:9KhdlH4PAlqVq4e0@cluster0.869u0.mongodb.net/Wordle?retryWrites=true&w=majority"
 ps=9KhdlH4PAlqVq4e0
 n=BordleAdmin
-CLIENT_URL="https://3vykk8.csb.app"
+CLIENT_URL="https://bordle-game.onrender.com"
