--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "refetch-interval",
+  "name": "bordle-api",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -16,5 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.21"
-  }
+  },
+  "keywords": [],
+  "description": "Api for my wordle copy"
 }
